--- a/.github/workflows/go-test.yaml
+++ b/.github/workflows/go-test.yaml
@@ -2,9 +2,9 @@ name: Go Tests
 
 on:
     push:
-        branches: [ main, master, develop ]
+        branches: [ main, master, develop, trunk ]
     pull_request:
-        branches: [ main, master, develop ]
+        branches: [ main, master, develop, trunk ]
 
 jobs:
     test:
