--- a/.github/workflows/page.yaml
+++ b/.github/workflows/page.yaml
@@ -6,10 +6,10 @@ on:
     - cron: '0 * * * *'
   # Allow manual trigger
   workflow_dispatch:
-  # Run on pushes to main branch
+  # Run on pushes to trunk branch
   push:
     branches:
-      - main
+      - trunk
 
 jobs:
   build-and-deploy:
